--- a/the_basics.ipynb
+++ b/the_basics.ipynb
@@ -146,7 +146,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lists, Tuples, Sets"
+    "### Lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "friends = [\"Kevin\", \"Karen\", \"Jim\"] # multi value item\n",
+    "friends = [\"Kevin\", 2, \"Jim\"] # can be a mix of types\n",
+    "\n",
+    "print(friends) # print whole list\n",
+    "print(friends[1]) # access elements, print Karen\n",
+    "print(friends[-1])  # print Jim\n",
+    "print(friends[1:]) # print Karen and Jim\n",
+    "\n",
+    "\"\"\"\n",
+    "    once initialized, you can reassign these individual values of course\n",
+    "\"\"\"\n",
+    "\n",
+    "lucky_numbers = [4, 8, 15, 16, 23, 42]\n",
+    "friends = [\"Kevin\", \"Karen\", \"Jim\", \"Oscar\", \"Toby\"] # multi value item\n",
+    "friends.extend(lucky_numbers) # append lucky_numbers to the end of the friends list\n",
+    "friends.append(\"Creed\") # add to end\n",
+    "friends.insert(1, \"Kelly\") # add new element in between Kevin and Karen\n",
+    "friends.pop() # pops an item off the list\n",
+    "friends.index(\"Kevin\")  # tell me if the value is in the list, and if so what it's index is\n",
+    "friends.count(\"Jim\")    # tell me how many times Jim shows in the list\n",
+    "\n",
+    "friends.sort()  # sorts in alphabetical order  CAN NEVER GET THE ORIGINAL ORDER BACK\n",
+    "\n"
    ]
   }
  ],
